--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -1,32 +1,31 @@
 {% extends "base.html" %}
 
+{% block login %}
+<button>GOOGLE SIGN IN</button>
+{% endblock %}
+
 {% block content %}
 <div class="item-grid">
   <div class="item-grid__header">
-    <h1>{{id}}</h1>
+    <h1>{{category.name}}</h1>
     <p class="description">
-      Category description text.
+      {{category.description}}
     </p>
   </div>
+  {% if items %}
+  {% for i in items %}
   <div class="item-grid__item">
-    <h3>Item Name</h3>
-    <img src="#" alt="item image">
-    <p class="description">Description Text</p>
+    <h3>{{i.name}}</h3>
+    <img src="{{i.picture}}" alt="item image" height="100" width="100">
+    <p class="description">{{i.description}}</p>
+    <div class="edit_buttons">
+      <button class="edit" name="edit" value="{{i.id}}"></button>
+      <button class="delete" name="delete" value="{{i.id}}"></button>
+    </div>
+  {% endfor %}
+  {% block addnew %}{% endblock %}
   </div>
-  <div class="item-grid__item">
-    <h3>Item Name</h3>
-    <img src="#" alt="item image">
-    <p class="description">Description Text</p>
-  </div>
-  <div class="item-grid__item">
-    <h3>Item Name</h3>
-    <img src="#" alt="item image">
-    <p class="description">Description Text</p>
-  </div>
-  <div class="item-grid__item">
-    <h3>Item Name</h3>
-    <img src="#" alt="item image">
-    <p class="description">Description Text</p>
-  </div>
+
+  {% endif %}
 </div>
 {% endblock %}
