--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,28 @@
 {% extends "base.html" %}
 
+{% block login %}
+<button>GOOGLE SIGN IN</button>
+{% endblock %}
+
 {% block content %}
 <div class="category-grid">
+  {% if categories %}
+  {% for i in categories %}
   <div class="category-grid__category">
-    <span class="subtext">Creator Name</span>
-    <h3>This is a category</h3>
-    <p class="description">This is category text.</p>
-    {% block edit_buttons %}{% endblock %}
+    <span class="subtext">{{users[(i.user_id - 1)].username}}</span>
+    <h3>
+      <a href="{{url_for('showCategory', id=i.id)}}">{{i.name}}</a>
+    </h3>
+    <p class="description">{{i.description}}</p>
+    <input type="button" value="{{i.id}}">
+    <div class="edit_buttons">
+      <button class="edit" name="edit" value="{{i.id}}"></button>
+      <button class="delete" name="delete" value="{{i.id}}"></button>
+    </div>
+  {% endfor %}
+  {% block addnew %}{% endblock %}
   </div>
+  {% endif %}
 <div class="carousel">
   <h1>Recent Items</h1>
   <button class="carousel__btn--left">left</button>
@@ -16,19 +31,16 @@
       <span class="subtext">Item</span>
       <h3>Item Name</h3>
       <p class="desription">This is item text.</p>
-      {{self.edit_buttons()}}
     </div>
     <div_class="carousel__item">
       <span class="subtext">Category Name</span>
       <h3>Item Name</h3>
       <p class="desription">This is item text.</p>
-      {{self.edit_buttons()}}
     </div>
     <div_class="carousel__item">
       <span class="subtext">Category Name</span>
       <h3>Item Name</h3>
       <p class="desription">This is item text.</p>
-      {{self.edit_buttons()}}
     </div>
     <button class="carousel__btn--right">right</button>
   </div>
