--- a/app/templates/index_loggedin.html
+++ b/app/templates/index_loggedin.html
@@ -1,6 +1,65 @@
 {% extends "index.html" %}
 
-{% block edit_buttons %}
-<button class="edit"></button>
-<button class="delete"></button>
+{% block login %}
+<div class="userinfo">
+<img src="{{user.picture}}" width="100" height="100">
+<p>
+  {{user.username}}
+</p>
+<a href="#">Log out</a>
+</div>
+{% endblock %}
+
+{% block addnew %}
+<div class="category-grid__category addnew">
+  <a href="#">
+    <h1>+</h1>
+    <h3>Add New</h3>
+  </a>
+</div>
+{% endblock %}
+
+{% block modals %}
+<div class="new_category modal">
+<form action="{{url_for('createNewCategory')}}" method="post">
+  {{ newcategory.hidden_tag() }}
+  <p>
+    {{ newcategory.name.label }}<br>
+    {{ newcategory.name(size=32) }}
+  </p>
+  <p>
+    {{ newcategory.description.label }}<br>
+    {{ newcategory.description(size=32) }}
+  </p>
+  {{ newcategory.submit() }}
+</form>
+</div>
+
+<div class="edit_category modal">
+<form action="{{url_for('editCategory')}}" method="post">
+  {{ editcategory.hidden_tag() }}
+  <p>
+    {{ editcategory.id }}
+  </p>
+  <p>
+    {{ editcategory.name.label }}<br>
+    {{ editcategory.name(size=32) }}
+  </p>
+  <p>
+    {{ editcategory.description.label }}<br>
+    {{ editcategory.description(size=32) }}
+  </p>
+  {{ editcategory.submit() }}
+</form>
+</div>
+
+<div class="delete_category modal">
+<form action="{{url_for('deleteCategory')}}" method="post">
+  {{ deletecategory.hidden_tag() }}
+  {{ deletecategory.id }} {{ deletecategory.submit() }}
+  <a href="{{url_for('index')}}">
+    <input type="button" value="&times; CANCEL">
+  </a>
+</form>
+</div>
 {% endblock %}
