--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,9 +31,9 @@
     <header>
       <h1><a href="{{url_for('index')}}">Catalog</a></h1>
       <div class="login">
-        <div class="g-signin2"></div>
+        <button id="signinButton">Sign in with Google</button>
         <script>
-          $('.g-signin2').click(function() {
+          $('#signinButton').click(function() {
             // signInCallback defined in step 6.
             auth2.grantOfflineAccess().then(signInCallback);
           });
@@ -60,26 +60,25 @@
     if (authResult['code']) {
 
       // Hide the sign-in button now that the user is authorized, for example:
-      $('.g-signin2').attr('style', 'display: none');
+      $('#signinButton').attr('style', 'display: none');
 
       // Send the code to the server
       $.ajax({
         type: 'POST',
-        url: 'http://example.com/storeauthcode',
-        // Always include an `X-Requested-With` header in every AJAX request,
-        // to protect against CSRF attacks.
-        headers: {
-          'X-Requested-With': 'XMLHttpRequest'
-        },
+        url: '/gconnect?state={{STATE}}',
         contentType: 'application/octet-stream; charset=utf-8',
-        success: function(result) {
-          // Handle or verify the server response.
-        },
         processData: false,
-        data: authResult['code']
-      });
+        data: authResult['code'],
+        success: function(result) {
+          if (result) {
+          console.log("Success");
+      } else if (authResult['error']) {
+    console.log('There was an error: ' + authResult['error']);
+        }
+    }
+    });
     } else {
-      // There was an error.
+      console.log('Failed to make a server-side call. Check your configuration and console.');
     }
   }
   </script>
