--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -66,7 +66,7 @@
         success: function(result) {
           if (result) {
           console.log("Success");
-          window.location.href = "/index";
+          {% block callback %} {% endblock %}
       } else if (authResult['error']) {
     console.log('There was an error: ' + authResult['error']);
         }
