--- a/app/templates/category_loggedin.html
+++ b/app/templates/category_loggedin.html
@@ -6,7 +6,7 @@
 <p>
   {{user.username}}
 </p>
-<a href="#">Log out</a>
+<a href="{{url_for('gdisconnect')}}">Log out</a>
 </div>
 {% endblock %}
 
@@ -39,7 +39,7 @@
   </form>
 </div>
 <div class="edit_item modal">
-  <form action="#" method="post">
+  <form action="{{url_for('editItem', id=id)}}" method="post">
     {{ edititem.hidden_tag() }}
     <p>
       {{ edititem.id }}
