--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,10 @@
 </script>
 {% endblock %}
 
+{% block callback %}
+window.location.href = "{{url_for('index')}}";
+{% endblock %}
+
 {% block content %}
 <div class="category-grid">
   {% if categories %}
