--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,8 @@ window.location.href = "{{url_for('index')}}";
   {% if categories %}
   {% for i in categories %}
   <div class="category-grid__category">
-    <span class="subtext">{{users[(i.user_id - 1)].username}}</span>
+    {% set categoryuser = User.query.get(i.user_id) %}
+    <span class="subtext">{{categoryuser.username}}</span>
     <h3>
       <a href="{{url_for('showCategory', id=i.id)}}">{{i.name}}</a>
     </h3>
@@ -30,28 +31,23 @@ window.location.href = "{{url_for('index')}}";
       <button class="delete" name="delete" value="{{i.id}}"></button>
     </div>
   {% endfor %}
+  {% block addnew %}{% endblock %}
   </div>
+</div>
   {% endif %}
-<div class="carousel">
+<div class="recent_items">
   <h1>Recent Items</h1>
-  <button class="carousel__btn--left">left</button>
-  <div class="carousel__items">
-    <div_class="carousel__item">
-      <span class="subtext">Item</span>
-      <h3>Item Name</h3>
-      <p class="desription">This is item text.</p>
+  <div class="recent_items__row">
+    {% for i in items[-1:-3:-1] %}
+    <div class="recent_items__item">
+      {% set itemcategory = Category.query.get(i.category) %}
+      <span class="subtext">{{itemcategory.name}}</span>
+      <h3>{{i.name}}</h3>
+      {% if i.picture %}
+      <img src="{{i.picture}}" alt="item image" height="100" width="100">
+      {% endif %}
+      <p class="desription">{{i.description}}</p>
     </div>
-    <div_class="carousel__item">
-      <span class="subtext">Category Name</span>
-      <h3>Item Name</h3>
-      <p class="desription">This is item text.</p>
-    </div>
-    <div_class="carousel__item">
-      <span class="subtext">Category Name</span>
-      <h3>Item Name</h3>
-      <p class="desription">This is item text.</p>
-    </div>
-    <button class="carousel__btn--right">right</button>
-  </div>
+    {% endfor %}
 </div>
 {% endblock %}
