--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<html itemscope itemtype="http://schema.org/Article">
+<html lang="en" itemscope itemtype="http://schema.org/Article">
 <head>
 
   <link type="text/css" rel="stylesheet" href="{{url_for('static', filename="style.css")}}"/>
