--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,67 +1,194 @@
 {% extends "base.html" %}
 
 {% block login %}
-<input id="signinButton" type=image src="{{url_for('static', filename="img/btn_google_signin_light_normal_web.png")}}">
-<script>
-  $('#signinButton').hover( function(){
-    $( this ).attr("src", "{{url_for('static', filename="img/btn_google_signin_light_pressed_web.png")}}")
-  }, function() {
-    $( this ).attr("src", "{{url_for('static', filename="img/btn_google_signin_light_normal_web.png")}}")
-  }
-  );
-  $('#signinButton').click(function() {
-    // signInCallback defined in step 6.
-    auth2.grantOfflineAccess().then(signInCallback);
-  });
-</script>
+  {% if is_logged_in %}
+    {% set user = User.query.filter_by(id=session['user_id']).one_or_none() %}
+    <div class="userinfo">
+    <img class ="user_photo" src="{{user.picture}}">
+    <div class="login_text">
+    {{user.username}}
+    <br>
+    <button onclick="window.location.href='{{url_for('gdisconnect')}}'">
+      Log out
+    </button>
+    </div>
+    </div>
+  {% else %}
+    <input id="signinButton" type=image src="{{url_for('static', filename="img/btn_google_signin_light_normal_web.png")}}">
+    <script>
+      $('#signinButton').hover( function(){
+        $( this ).attr("src", "{{url_for('static', filename="img/btn_google_signin_light_pressed_web.png")}}")
+      }, function() {
+        $( this ).attr("src", "{{url_for('static', filename="img/btn_google_signin_light_normal_web.png")}}")
+      }
+      );
+      $('#signinButton').click(function() {
+        // signInCallback defined in step 6.
+        auth2.grantOfflineAccess().then(signInCallback);
+      });
+    </script>
+  {% endif %}
 {% endblock %}
 
-{% block callback %}
-window.location.href = "{{url_for('index')}}";
-{% endblock %}
+  {% block callback %}
+  window.location.href = "{{url_for('index')}}";
+  {% endblock %}
 
 {% block content %}
-<div class="category-grid">
-  {% if categories %}
-  {% for i in categories %}
-  <div class="category-grid__category">
-    {% set categoryuser = User.query.get(i.user_id) %}
-    <span class="subtext">{{categoryuser.username}}</span>
-    <h3>
-      <a id="categoryName{{i.id}}" href="{{url_for('showCategory', id=i.id)}}">{{i.name}}</a>
-    </h3>
-    <p id="categoryDescription{{i.id}}" class="description">{{i.description}}</p>
-    <input class="id_button" type="button" value="{{i.id}}">
-
-    {% if user and user.id == i.user_id %}
-    <div class="edit_buttons">
-      <button class="edit material-icons md-dark" name="edit" value="{{i.id}}">edit</button>
-      <button class="delete material-icons md-dark" name="delete" value="{{i.id}}">delete</button>
-    </div>
-    {% endif %}
-  </div>
-  {% endfor %}
-  {% endif %}
-  {% block addnew %}{% endblock %}
-  </div>
-<div class="recent_items">
-  <h1>Recent Items</h1>
-  <div class="recent_items__row">
-    {% for i in items[-1:-3:-1] %}
-    <div class="recent_items__item">
-      {% set itemcategory = Category.query.get(i.category) %}
-      <span class="subtext">{{itemcategory.name}}</span>
-      <h3>{{i.name}}</h3>
-      {% if i.picture %}
-      <img src="{{i.picture}}" alt="item image">
+  <div class="category-grid">
+    {% if categories %}
+    {% for i in categories %}
+    <div class="category-grid__category">
+      {% set categoryuser = User.query.get(i.user_id) %}
+      <span class="subtext">{{categoryuser.username}}</span>
+      <h3>
+        <a id="categoryName{{i.id}}" href="{{url_for('showCategory', id=i.id)}}">{{i.name}}</a>
+      </h3>
+      <p id="categoryDescription{{i.id}}" class="description">{{i.description}}</p>
+      <input class="id_button" type="button" value="{{i.id}}">
+      {% if is_logged_in %}
+      {% set user = User.query.filter_by(id=session['user_id']).one_or_none() %}
+      {% if user.id == i.user_id %}
+      <div class="edit_buttons">
+        <button class="edit material-icons md-dark" name="edit" value="{{i.id}}">edit</button>
+        <button class="delete material-icons md-dark" name="delete" value="{{i.id}}">delete</button>
+      </div>
       {% endif %}
-      <p class="description">{{i.description}}</p>
+      {% endif %}
+
+
     </div>
     {% endfor %}
-</div>
+    {% endif %}
+    {% if is_logged_in %}
+        <div class="category-grid__category addnew">
+          <i class="material-icons md-48">add_box</i>
+          <h3>Add New</h3>
+        </div>
+    {% endif %}
+    </div>
+  <div class="recent_items">
+    <h1>Recent Items</h1>
+    <div class="recent_items__row">
+      {% for i in items[-1:-3:-1] %}
+      <div class="recent_items__item">
+        {% set itemcategory = Category.query.get(i.category) %}
+        <span class="subtext">{{itemcategory.name}}</span>
+        <h3>{{i.name}}</h3>
+        {% if i.picture %}
+        <img src="{{i.picture}}" alt="item image">
+        {% endif %}
+        <p class="description">{{i.description}}</p>
+      </div>
+      {% endfor %}
+  </div>
 {% endblock %}
-{% block hidebuttons %}
-<script>
-$('div.edit_buttons').css("display", "none");
-</script>
-{% endblock %}
+
+
+  {% block modals %}
+  <div id="newCategory" class="modal">
+    <div class="content">
+      <form action="{{url_for('createNewCategory')}}" method="post">
+        {{ newcategory.hidden_tag() }}
+        <h1> Create New Category</h1>
+        <div class="form_fields">
+          <p>
+            {{ newcategory.name.label }}<br>
+            {{ newcategory.name }}
+          </p>
+          <p>
+            {{ newcategory.description.label }}<br>
+            {{ newcategory.description }}
+          </p>
+        </div>
+        <div class="form_buttons">
+          <button type="button" class="cancelBtn"> CANCEL</button>
+          {{ newcategory.submit() }}
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div id="editCategory" class="modal">
+    <div class="content">
+      <form action="{{url_for('editCategory')}}" method="post">
+        {{ editcategory.hidden_tag() }}
+        {{ editcategory.id }}
+        <h1> Edit Category </h1>
+        <div class="form_fields">
+          <p>
+            {{ editcategory.name.label }}<br>
+            {{ editcategory.name }}
+          </p>
+          <p>
+            {{ editcategory.description.label }}<br>
+            {{ editcategory.description }}
+          </p>
+        </div>
+        <div class="form_buttons">
+          <button type="button" class="cancelBtn"> CANCEL</button>
+          {{ editcategory.submit() }}
+        </div>
+      </form>
+    </div>
+  </div>
+
+
+  <div id="deleteCategory" class="modal">
+    <div class="content">
+      <form action="{{url_for('deleteCategory')}}" method="post">
+        {{ deletecategory.hidden_tag() }}
+        <h1>Delete Category?</h1>
+        <p style="padding: 10px;">
+          Deleting this category will also delete all the items associated with it.
+        </p>
+        <div class="form_buttons" style="margin-left: 55%;">
+          <button type="button" class="cancelBtn"> CANCEL</button>
+          {{ deletecategory.submit() }}
+        </div>
+      </form>
+    </div>
+  </div>
+  <script>
+  // New Category Modal function
+  $( ".addnew" ).click( function() {
+    $( "#newCategory" ).css("display", "block");
+  });
+
+
+  //Edit Category Modal function
+  $("button[name=edit]").click( function (){
+    //Get ID and current name and description for category
+    var id = $( this ).val();
+    var nameSelector = "#categoryName" + id;
+    var descriptionSelector = "#categoryDescription" + id;
+    var name = $(nameSelector).text()
+    var descr = $(descriptionSelector).text()
+
+    //Populate form fields with existing values
+    $( "#editID" ).val( id );
+    $( "input[name=name]" ).val(name);
+    $( "textarea[name=description]" ).val(descr);
+
+    $("#editCategory" ).css("display", "block" );
+  });
+
+  //Delete Category Modal function
+  $("button[name=delete]").click( function (){
+    //Get ID and current name and description for category
+    var id = $( this ).val();
+    $( "#deleteID" ).val( id );
+    $("#deleteCategory" ).css("display", "block" );
+  });
+
+  $( ".cancelBtn").click( function() {
+    $( ".modal" ).css("display", "none");
+  })
+
+  </script>
+  {% if not is_logged_in %}
+    <script>
+    $('div.edit_buttons').css("display", "none");
+    </script>
+  {% endif %}
+  {% endblock %}
